infrastructure/vpn/exposure/ingressroute.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headscale
  namespace: controller-vpn
  annotations:
      external-dns.alpha.kubernetes.io/hostname: vpn.${domain_prefix}${project}.${domain}
      external-dns.alpha.kubernetes.io/target: ${domain_prefix}${project}.${domain}
      external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vpn.${domain_prefix}${project}.${domain}`)
      kind: Rule
      services:
        - name: headscale
          port: 8080
          scheme: http
  tls:
    secretName: wildcard.${domain_prefix}${project}.${domain}.tls
